fixing lighthouse manifest error

--- a/barcode-reader/public/manifest.json
+++ b/barcode-reader/public/manifest.json
@@ -1,11 +1,16 @@
 {
   "short_name": "BarcodeReader",
   "name": "Barcode Reader PWA",
+  "description": "A quirky barcode app",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "192x192 512x512 24x24 16x16",
+      "sizes": "512x512 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {"src": "./barcode.png",
+    "sizes": "192x192 512x512",
+    "type": "image/png"
     }
   ],
   "start_url": "./index.html",
