--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "cra-append-sw": "^2.6.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
