--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "cra-append-sw": "^2.6.1",
+    "dexie": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
