--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
-    "react-sidenav": "^4.0.3"
+    "react-sidemenu": "^1.1.0",
+    "react-sidenav": "^4.0.3",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
