--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "cra-append-sw": "^2.6.1",
     "dexie": "^2.0.4",
+    "javascript-barcode-reader": "^0.4.15",
     "mdbreact": "^4.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
