--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -16,6 +16,7 @@
     "react-burger-menu": "^2.6.10",
     "react-detect-offline": "^2.4.0",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
