--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
+    "react-router-transition": "^1.3.0",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
     "react-sidemenu": "^1.1.0",
