--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "cra-append-sw": "^2.6.1",
     "dexie": "^2.0.4",
+    "firebase": "^6.3.3",
     "javascript-barcode-reader": "^0.4.15",
     "mdbreact": "^4.18.0",
     "prop-types": "^15.7.2",
@@ -23,6 +24,7 @@
     "react-sidebar": "^3.0.2",
     "react-sidemenu": "^1.1.0",
     "react-sidenav": "^4.0.3",
+    "react-with-firebase-auth": "^1.0.3",
     "styled-components": "^4.3.2"
   },
   "scripts": {
