--- a/barcode-reader/package.json
+++ b/barcode-reader/package.json
@@ -9,6 +9,7 @@
     "cra-append-sw": "^2.6.1",
     "dexie": "^2.0.4",
     "firebase": "^6.3.3",
+    "impromptu-react-sidemenu": "^0.1.1",
     "javascript-barcode-reader": "^0.4.15",
     "mdbreact": "^4.18.0",
     "prop-types": "^15.7.2",
@@ -19,6 +20,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.0.1",
+    "react-router-page-transition": "^3.1.0",
     "react-router-transition": "^1.3.0",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
