--- a/barcode-reader/public/manifest.json
+++ b/barcode-reader/public/manifest.json
@@ -16,5 +16,6 @@
   "scope":"./",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#000000"
+  "background_color": "#000000",
+  "gcm_sender_id": "165078823083"
 }
